--- a/Server/lib/Web/public/kkutu_bulletin.html
+++ b/Server/lib/Web/public/kkutu_bulletin.html
@@ -1,4 +1,6 @@
-<html>
+<html style="
+overflow-y: hidden;
+">
 	<head>
 		<title>끄투 공지사항</title>
 <style>
@@ -9,16 +11,61 @@ li{
 	font-size: 13px;
 }
 </style>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 	</head>
 	<body style='height: 100%;'>
-		<h3>2.5.1 [171218]</h3>
-		<ul>
-			<li>[by <a href="https://github.com/small-sunshines" target="_blank">small-sunshines</a>] 끄투 서버가 보안 연결을 지원하도록 설정했습니다.</li>
-			<li>[by <a href="https://github.com/horyu1234" target="_blank">horyu1234</a>] 자동 입력 방지를 위한 시스템을 도입했습니다.</li>
-		</ul>
-		<h3>2.5.0 [170214]</h3>
-		<ul>
-			<li>글자로 놀자! 끄투 온라인 프리 서버가 공개되었습니다.</li>
-		</ul>
+<!-- Slider main container -->
+<div class="swiper">
+	<!-- Additional required wrapper -->
+	<div class="swiper-wrapper">
+	  <!-- Slides -->
+	  <div class="swiper-slide"><div  width="100%" height="400px" style="background: center;
+		background-repeat: no-repeat;
+		height: 400px;
+		background-image: url(https://imagestorage.pcor.me/images/2023/12/10/carousel1.png);"></div></div>
+	<div class="swiper-slide"><div  width="100%" height="400px" style="background: center;
+		background-repeat: no-repeat;
+		height: 400px;
+		background-image: url(https://imagestorage.pcor.me/images/2023/12/10/carousel2.png);"></div></div>
+	</div>
+	<!-- If we need pagination -->
+	<div class="swiper-pagination"></div>
+  
+	<!-- If we need navigation buttons -->
+	<div class="swiper-button-prev"></div>
+	<div class="swiper-button-next"></div>
+  
+	<!-- If we need scrollbar -->
+	<div class="swiper-scrollbar"></div>
+  </div>
+
+  <script>
+	const swiper = new Swiper('.swiper', {
+  // Optional parameters
+  direction: 'horizontal',
+  loop: true,
+
+  // If we need pagination
+  pagination: {
+    el: '.swiper-pagination',
+  },
+
+  // Navigation arrows
+  navigation: {
+    nextEl: '.swiper-button-next',
+    prevEl: '.swiper-button-prev',
+  },
+
+  // And if we need scrollbar
+  scrollbar: {
+    el: '.swiper-scrollbar',
+  },
+});
+</script>
 	</body>
 </html>
