타 끄투 프리서버 언급 제한 및 관리페이지 개선

--- a/Server/lib/Web/public/global_notice.html
+++ b/Server/lib/Web/public/global_notice.html
@@ -1,1 +1,1 @@
-﻿클로즈 베타 진행중입니다. 이 게임은 게임물관리위원회의 심의를 받지 않았습니다. 클릭하면 본 창을 닫을 수 있습니다.
+﻿타 끄투 프리서버 플레이를 조장하거나 이를 언급하는 행위는 서버간 분란을 막기 위해, 제재의 대상입니다. 클릭하여 창을 닫을 수 있습니다.
