메인페이지 수정 및 코인샵 바로가기 추가, 해상도패치 버그픽스, 블랙리스트 개선

--- a/Server/lib/Web/public/kkutu_bulletin.html
+++ b/Server/lib/Web/public/kkutu_bulletin.html
@@ -18,30 +18,24 @@ li{
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 	</head>
-	<body style='height: 100%;'>
+	<body style='height: 100%; margin:0px;'>
 <!-- Slider main container -->
 <div class="swiper">
 	<!-- Additional required wrapper -->
 	<div class="swiper-wrapper">
 	  <!-- Slides -->
-	  <div class="swiper-slide"><div  width="100%" height="400px" style="background: center;
+	  <div class="swiper-slide"><div  width="100%" height="500px" style="background-size: cover;
 		background-repeat: no-repeat;
-		height: 400px;
+		height: 500px;
 		background-image: url(https://imagestorage.pcor.me/images/2023/12/10/carousel1.png);"></div></div>
-	<div class="swiper-slide"><div  width="100%" height="400px" style="background: center;
+	<div class="swiper-slide"><div  width="100%" height="500px" style="background-size: cover;
 		background-repeat: no-repeat;
-		height: 400px;
+		height: 500px;
 		background-image: url(https://imagestorage.pcor.me/images/2023/12/10/carousel2.png);"></div></div>
 	</div>
 	<!-- If we need pagination -->
 	<div class="swiper-pagination"></div>
   
-	<!-- If we need navigation buttons -->
-	<div class="swiper-button-prev"></div>
-	<div class="swiper-button-next"></div>
-  
-	<!-- If we need scrollbar -->
-	<div class="swiper-scrollbar"></div>
   </div>
 
   <script>
@@ -53,17 +47,6 @@ li{
   // If we need pagination
   pagination: {
     el: '.swiper-pagination',
-  },
-
-  // Navigation arrows
-  navigation: {
-    nextEl: '.swiper-button-next',
-    prevEl: '.swiper-button-prev',
-  },
-
-  // And if we need scrollbar
-  scrollbar: {
-    el: '.swiper-scrollbar',
   },
 });
 </script>
