--- a/Server/lib/Web/public/global_notice.html
+++ b/Server/lib/Web/public/global_notice.html
@@ -1,1 +1,1 @@
-﻿타 끄투 프리서버 플레이를 조장하거나 이를 언급하는 행위는 서버간 분란을 막기 위해, 제재의 대상입니다. 클릭하여 창을 닫을 수 있습니다.
+﻿겨울 시즌을 맞아 편곡된 끄투 배경음악! Twitch 스트리머 유뚠뚠 X 플러스끄투 콜라보 BGM을 지금 로비에서 들어보세요! / 기존 배경음악을 들으시려면 설정 -> '원작 BGM' 옵션을 활성화하세요. / Plus 직원은 고객 응대 시 고객님의 소중한 개인정보를 물어보지 않습니다. / 대리 및 비인가 프로그램을 악용한 오끄감 및 핑 수집 행위는 제재를 받을 수 있습니다. / Plus 끄투 오픈베타 오픈! 지금 즐겨보세요. / 클릭하면 창을 닫을 수 있습니다.
