--- a/frontpage/public/global_notice_m.html
+++ b/frontpage/public/global_notice_m.html
@@ -1,4 +1,4 @@
-﻿<h1>새로운 소식</h1>
+﻿<!--<h1>새로운 소식</h1>
 
 <ul>
     <li></li>
@@ -8,4 +8,4 @@
     <li>Plus 끄투 오픈베타 오픈! 지금 즐겨보세요.</li>
 </ul>
 
-<i>터치하면 창을 닫을 수 있습니다.</i>
+<i>터치하면 창을 닫을 수 있습니다.</i>-->
