--- a/Server/lib/Web/public/index.html
+++ b/Server/lib/Web/public/index.html
@@ -8,12 +8,12 @@
 			<meta name="keywords" content="끄투, kkutu, 플러스끄투, 두근두근, 끝말잇기, 앞말잇기, 십자말풀이, 웹, 쿵쿵따, 영어끝말잇기, 영어쿵쿵따, 끝말잇기사이트, 자음퀴즈, 초성퀴즈, 그림퀴즈, 십자말풀이, 가로세로, 타자, 타자연습, 앞말잇기" class="s-y_bCXRrkrYfP"><meta name="description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta name="publisher" content="Gaming+" class="s-y_bCXRrkrYfP"><meta property="og:title" content="두근두근 플러스끄투" class="s-y_bCXRrkrYfP"><meta property="og:description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta property="og:url" content="https://kkutu.cc" class="s-y_bCXRrkrYfP"><meta property="og:site_name" content="플러스끄투" class="s-y_bCXRrkrYfP"><meta property="og:type" content="website" class="s-y_bCXRrkrYfP"><meta property="og:image" content="https://kkutu.cc/img/kkutu/og.png" class="s-y_bCXRrkrYfP"><meta property="og:image:width" content="1200" class="s-y_bCXRrkrYfP"><meta property="og:image:height" content="630" class="s-y_bCXRrkrYfP"><meta property="og:locale" content="ko-KR" class="s-y_bCXRrkrYfP"><meta name="twitter:card" content="summary_large_image" class="s-y_bCXRrkrYfP"><meta name="twitter:site" content="kkutu.cc" class="s-y_bCXRrkrYfP"><meta name="twitter:title" content="두근두근 플러스끄투" class="s-y_bCXRrkrYfP"><meta name="twitter:description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta name="twitter:image" content="https://kkutu.cc/img/kkutu/og.png" class="s-y_bCXRrkrYfP">
 		
 		<link href="./_app/immutable/assets/0.epmUK4ie.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.jGIpcTcG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.7BBbMTiq.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.1-1fosgs.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.viP8d5SB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.S4wXxuDW.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.9NF2tNHn.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.sntbHW1m.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NdZPWm3R.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.9x8wJHzb.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.PSebcQvl.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.xrA2ipTc.js"><title>Main - 플러스끄투</title><!-- HEAD_svelte-8ki071_START --><!-- HEAD_svelte-8ki071_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1m65dwc = {
+					__sveltekit_83udn7 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -38,8 +38,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.jGIpcTcG.js"),
-						import("./_app/immutable/entry/app.9NF2tNHn.js")
+						import("./_app/immutable/entry/start.1-1fosgs.js"),
+						import("./_app/immutable/entry/app.sntbHW1m.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
