주제 업데이트

--- a/Server/lib/Web/public/global_notice.html
+++ b/Server/lib/Web/public/global_notice.html
@@ -1,1 +1,1 @@
-﻿~02.10 오픈베타 (OBT) 테스트 중입니다. | 부적절한 이미지의 사용을 제한하기 위해 일부 프로필 이미지를 대상으로 모자이크 처리를 진행하고 있습니다.
+﻿~02.10 오픈베타 (OBT) 테스트 중입니다. | 어서와 플끄 이벤트 진행중! 10만XP까지 인정받으세요.
