--- a/neofront/static/global_notice_m.html
+++ b/neofront/static/global_notice_m.html
@@ -2,7 +2,7 @@
 
 <ul>
     <li>~02.10 오픈베타 (OBT) 테스트 중입니다.</li>
-    <li>부적절한 이미지의 사용을 제한하기 위해 일부 프로필 이미지를 대상으로 모자이크 처리를 진행하고 있습니다.</li>
+    <li>어서와 플끄 이벤트 진행중! 10만XP까지 인정받으세요.</li>
 </ul>
 
 <i>터치하면 창을 닫을 수 있습니다.</i>
