--- a/Server/lib/Web/public/global_notice.html
+++ b/Server/lib/Web/public/global_notice.html
@@ -1,1 +1,1 @@
-﻿오픈 기념! Twitch 스트리머 레스님과의 콜라보! 총 3번의 쿠폰 코드로 2,500핑을 가져가세요~ | ~02.20 오픈베타 (OBT) 테스트 중입니다. | 어서와 플끄 이벤트 진행중! 10만XP까지 인정받으세요. | 플끄에서는 매일매일이 축제, 하루 2회 핫타임!! (12:00~14:59, 19:00~23:59)
+﻿신규브금임시 (카트라이더브금임)
