--- a/neofront/static/kkutu_notice.html
+++ b/neofront/static/kkutu_notice.html
@@ -1,2 +1,10 @@
-<center>서버와의 연결이 끊어졌습니다!</center>
-<center></center>
+<center><strong>서버와의 연결이 끊어졌습니다!</strong><br><br>
+<strong>잠깐! 계속 표시된다면 아래를 확인해 주세요.</strong><br>
+<ul>
+    <li>다른 탭에서 끄투를 플레이 중인 경우</li>
+    <li>다른 끄투 프리서버를 플레이 중인 경우</li>
+    <li>인터넷 접속 상태가 원활하지 않은 경우</li>
+    <li>서비스 점검 중인 경우 (공식 카페 및 Discord에 공지합니다)</li>
+    <li>이용자 제재를 받으신 경우</li>
+</ul>
+</center>
