인게임 배경음악 컨픽 수정 및 프로필 버튼 개선

--- a/Server/lib/Web/public/index.html
+++ b/Server/lib/Web/public/index.html
@@ -11,16 +11,16 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3808496003691786"
      		crossorigin="anonymous"></script>
-			<meta name="keywords" content="끄투, kkutu, 플러스끄투, 두근두근, 끝말잇기, 앞말잇기, 십자말풀이, 웹, 쿵쿵따, 영어끝말잇기, 영어쿵쿵따, 끝말잇기사이트, 자음퀴즈, 초성퀴즈, 그림퀴즈, 십자말풀이, 가로세로, 타자, 타자연습, 앞말잇기" class="s-y_bCXRrkrYfP"><meta name="description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta name="publisher" content="Gaming+" class="s-y_bCXRrkrYfP"><meta property="og:title" content="두근두근 플러스끄투" class="s-y_bCXRrkrYfP"><meta property="og:description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta property="og:url" content="https://kkutu.cc" class="s-y_bCXRrkrYfP"><meta property="og:site_name" content="플러스끄투" class="s-y_bCXRrkrYfP"><meta property="og:type" content="website" class="s-y_bCXRrkrYfP"><meta property="og:image" content="https://kkutu.cc/img/kkutu/og.png" class="s-y_bCXRrkrYfP"><meta property="og:image:width" content="1200" class="s-y_bCXRrkrYfP"><meta property="og:image:height" content="630" class="s-y_bCXRrkrYfP"><meta property="og:locale" content="ko-KR" class="s-y_bCXRrkrYfP"><meta name="twitter:card" content="summary_large_image" class="s-y_bCXRrkrYfP"><meta name="twitter:site" content="kkutu.cc" class="s-y_bCXRrkrYfP"><meta name="twitter:title" content="두근두근 플러스끄투" class="s-y_bCXRrkrYfP"><meta name="twitter:description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta name="twitter:image" content="https://kkutu.cc/img/kkutu/og.png" class="s-y_bCXRrkrYfP">
+			<meta name="keywords" content="끄투, kkutu, 플러스끄투, 두근두근, 끝말잇기, 앞말잇기, 십자말풀이, 웹, 쿵쿵따, 영어끝말잇기, 영어쿵쿵따, 끝말잇기사이트, 자음퀴즈, 초성퀴즈, 그림퀴즈, 십자말풀이, 가로세로, 타자, 타자연습, 앞말잇기" class="s-y_bCXRrkrYfP"><meta name="description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta name="publisher" content="Gaming+" class="s-y_bCXRrkrYfP"><meta property="og:title" content="플러스끄투" class="s-y_bCXRrkrYfP"><meta property="og:description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta property="og:url" content="https://kkutu.cc" class="s-y_bCXRrkrYfP"><meta property="og:site_name" content="플러스끄투" class="s-y_bCXRrkrYfP"><meta property="og:type" content="website" class="s-y_bCXRrkrYfP"><meta property="og:image" content="https://kkutu.cc/img/kkutu/og.png" class="s-y_bCXRrkrYfP"><meta property="og:image:width" content="1200" class="s-y_bCXRrkrYfP"><meta property="og:image:height" content="630" class="s-y_bCXRrkrYfP"><meta property="og:locale" content="ko-KR" class="s-y_bCXRrkrYfP"><meta name="twitter:card" content="summary_large_image" class="s-y_bCXRrkrYfP"><meta name="twitter:site" content="kkutu.cc" class="s-y_bCXRrkrYfP"><meta name="twitter:title" content="플러스끄투" class="s-y_bCXRrkrYfP"><meta name="twitter:description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta name="twitter:image" content="https://kkutu.cc/img/kkutu/og.png" class="s-y_bCXRrkrYfP">
 		
 		<link href="./_app/immutable/assets/0.7bBX874y.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Oyr-154p.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Tdjlmel0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.y6PXoVsu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.SNIIsGRJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KhlQcs0i.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.G0l1i5uV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CgMUfWkU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ufJ81Naj.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.5uT__qWU.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.T0leZ2ez.js"><title>플러스끄투 - 혼자도 같이도 즐거운 온라인 단어 게임</title><!-- HEAD_svelte-j0c1yx_START --><!-- HEAD_svelte-j0c1yx_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.zDqTwtI2.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.c_zsnhoq.js"><title>플러스끄투 - 혼자도 같이도 즐거운 온라인 단어 게임</title><!-- HEAD_svelte-j0c1yx_START --><!-- HEAD_svelte-j0c1yx_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <div class="app"><header class="top-0 lg:top-[20px] absolute py-4 lg:py-0 w-full z-10" data-svelte-h="svelte-8oratq"><nav class="max-w-screen-xl mx-auto flex items-center justify-between px-4 lg:px-8 lg:py-0" aria-label="Global"><div class="flex lg:flex-1"><a href="/"><button class="-m-1.5 p-1.5 md:flex"><span class="sr-only">플러스끄투</span><img class="h-6" src="/img/logo_dark.png" alt=""></button></a></div> <div class="hidden py-4 lg:flex text-white"><a href="https://cafe.naver.com/pluskkutu" class="mr-6 text-xl flex rounded-xl py-2 px-2 transform ease-in duration-100 active:scale-95 hover:backdrop-blur-lg hover:bg-white/20">카페</a> <a href="https://discord.gg/5b8kNZJawd" class="mr-6 text-xl flex rounded-xl py-2 px-2 transform ease-in duration-100 active:scale-95 hover:backdrop-blur-lg hover:bg-white/20">디스코드</a> <a href="https://kkutu.cc/login" class="mr-6 text-xl flex rounded-xl py-2 px-2 transform ease-in duration-100 active:scale-95 hover:backdrop-blur-lg hover:bg-white/20">로그인</a></div> <div class="lg:hidden flex flex-1 justify-end"><div><a href="https://kkutu.cc/game?server=0" class="flex items-center justify-center text-white text-lg lg:text-3xl h-full px-2 lg:py-4 lg:px-12 transform ease-in duration-100 active:scale-95 bg-white/20" style="transform: skew(-10deg);"><span class="font-bold tracking-wide">게임시작</span></a></div></div></nav></header> <main> <div class="dark:bg-gray-900 dark:text-white"><section class="hero w-full"><div class="mx-auto max-w-screen-2xl container px-4 md:px-6"> <div class="justify-center flex flex-col items-center"><img src="/img/web/tit_wordmark.svg" alt="벚꽃이 만개한 교문 너머로" class="h-12 xl:h-24"> <img src="/img/web/con_wordmark.svg" alt="새 학기, 새 학년! 플끄에서도 새롭게 출발 해 보세요." class="h-6 mt-8"> <a class="mt-16 hidden lg:flex bg-white rounded-full text-gray-800 shadow-lg px-8 py-2 font-bold text-3xl" href="https://kkutu.cc/game?server=0" data-svelte-h="svelte-1ye0zjl">시작하기</a> <a class="download-link mt-4 hidden lg:flex inline-flex text-lg px-4 py-2 text-white" href="#" data-svelte-h="svelte-1tgwyvk">클라이언트 다운로드</a></div></div></section> <div class="modal"><div class="modal-content"><button class="modal-close text-2xl text-gray-500" data-svelte-h="svelte-1l2t0vo">×</button> <h3 class="text-3xl font-bold text-center dark:text-black" data-svelte-h="svelte-y74in0">PC 클라이언트 다운로드</h3> <p class="text-gray-500 text-center" data-svelte-h="svelte-ynjcs0">현재 Windows 기기만 지원합니다. (macOS 추후 지원 예정)</p> <div class="px-4 w-full" data-svelte-h="svelte-104tp3g"><a href="https://github.com/Plus-Platforms/KKuTu/releases/download/1.0.0/install-1.0.0.exe"><button class="mt-3 px-3 w-full bg-blue-500 font-bold text-white text-center m-auto py-2 transform ease-in duration-100 active:scale-95 hover:bg-blue-700">V 1.0.0 다운로드<br>
@@ -34,7 +34,7 @@
 			
 			<script>
 				{
-					__sveltekit_107cmhe = {
+					__sveltekit_v7shv7 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -43,8 +43,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Oyr-154p.js"),
-						import("./_app/immutable/entry/app.G0l1i5uV.js")
+						import("./_app/immutable/entry/start.y6PXoVsu.js"),
+						import("./_app/immutable/entry/app.CgMUfWkU.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
