--- a/neofront/src/app.html
+++ b/neofront/src/app.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8" />
 		<head>
 			<meta charset="utf-8">
-			<meta name="description" content="온라인 끝말잇기, 앞말잇기, 자음퀴즈, 십자말풀이, 타자 대결까지! 끄투에서 어휘력의 제왕이 되어 보세요.">
+			<meta name="description" content="웹에서 즐기는 끝말잇기 온라인, 쿵쿵따, 수학퀴즈, 앞말잇기, 자음퀴즈, 모음퀴즈, 십자말풀이! 플러스끄투에서 모두 즐겨보세요.">
 			<meta name="keywords" content="끄투,kkutu,끝말잇기,온라인,웹,쿵쿵따,영어끝말잇기,영어쿵쿵따,시리토리,끝말잇기사이트,자음퀴즈,초성퀴즈,자퀴,십자말풀이,가로세로,타자,타자연습,앞말잇기">
-			<meta property="og:description" content="글자로 박진감 넘치는 게임을 즐겨보세요!">
+			<meta property="og:description" content="웹에서 즐기는 끝말잇기 온라인, 쿵쿵따, 수학퀴즈, 앞말잇기, 자음퀴즈, 모음퀴즈, 십자말풀이! 플러스끄투에서 박진감 넘치는 게임을 즐겨보세요.">
 			<meta property="og:image" content="https://kkutu.cc/img/kkutu/og.png">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3808496003691786"
