글로벌 공지 개선

--- a/Server/lib/Web/public/global_notice_m.html
+++ b/Server/lib/Web/public/global_notice_m.html
@@ -1,10 +1,8 @@
 ﻿<h1 style="text-align: center;">새로운 소식</h1>
 
 <ul>
-    <li>오픈 기념! Twitch 스트리머 레스님과의 콜라보! 총 3번의 쿠폰 코드로 2,500핑을 가져가세요~</li>
-    <li>~02.20 오픈베타 (OBT) 테스트 중입니다.</li>
-    <li>어서와 플끄 이벤트 진행중! 10만XP까지 인정받으세요.</li>
-    <li>플끄에서는 매일매일이 축제, 하루 2회 핫타임!! (12:00~14:59, 19:00~23:59)</li>
+    <li>모바일 환경 개선중입니다. 가급적 PC로 플레이해주세요.</li>
+    <li>간헐적으로 로그인 장애가 발생할 수 있습니다.</li>
 </ul>
 
 <i style="text-align: center;">터치하면 창을 닫을 수 있습니다.</i>
