--- a/neofront/static/global_notice.html
+++ b/neofront/static/global_notice.html
@@ -1,1 +1,1 @@
-﻿간헐적으로 로그인 장애가 발생할 수 있습니다. 로그인 장애 현상 발생 시 카페 및 디스코드에 문의부탁드립니다. 불편을 드려 죄송합니다.
+﻿원인을 알 수 없는 로그인 장애가 지속적으로 발생중입니다. 로그인 장애 발생시 카페, 디스코드에 문의부탁드립니다.
