--- a/neofront/static/global_notice.html
+++ b/neofront/static/global_notice.html
@@ -1,1 +1,1 @@
-﻿원인을 알 수 없는 로그인 장애가 지속적으로 발생중입니다. 로그인 장애 발생시 카페, 디스코드에 문의부탁드립니다.
+﻿그 누구보다 업데이트 소식을 가장 먼저 받고, GM과 소통할 수 있는 디스코드 서버에 참여해보세요! <a href="https://discord.gg/bt25WdwzR7" style="background-color:blue;color:#fff;" target="_blank">[참여하기]</a>
