--- a/neofront/static/global_notice.html
+++ b/neofront/static/global_notice.html
@@ -1,1 +1,2 @@
-﻿그 누구보다 업데이트 소식을 가장 먼저 받고, GM과 소통할 수 있는 디스코드 서버에 참여해보세요! <a href="https://discord.gg/bt25WdwzR7" style="background-color:blue;color:#fff;" target="_blank">[참여하기]</a>
+﻿<!--그 누구보다 업데이트 소식을 가장 먼저 받고, GM과 소통할 수 있는 디스코드 서버에 참여해보세요! <a href="https://discord.gg/bt25WdwzR7" style="background-color:blue;color:#fff;" target="_blank">[참여하기]</a>-->
+타 프리서버 유저분들을 위한 특별한 이벤트! 끄투 경험치 플끄와 동기화하자! 지금 '이벤트'탭에서 만나보세요.
