--- a/Front/static/notice/global_notice.html
+++ b/Front/static/notice/global_notice.html
@@ -1,1 +1,3 @@
-﻿그 누구보다 업데이트 소식을 가장 먼저 받고, GM과 소통할 수 있는 디스코드 서버에 참여해보세요! <a href="https://discord.gg/bt25WdwzR7" style="background-color:blue;color:#fff;" target="_blank">[참여하기]</a>
+﻿<!--차기작 <strong>끄투위키</strong>에 대한 소식을 가장 먼저! <a href="https://discord.gg/bt25WdwzR7" style="background-color:blue;color:#fff;" target="_blank">[참여하기]</a>-->
+
+모던 UI 지원이 2024년 6월 중으로 잠시 중단됩니다. 완벽한 모습으로 돌아오겠습니다.
