Phase UP 추가 및 보안코드 구현

--- a/Front/static/ban.html
+++ b/Front/static/ban.html
@@ -6,13 +6,13 @@
 <p>저희 플러스끄투는 채팅 정지와 이용자 정지로 제재를 구분하고 있습니다.</p>
 <p>그 중 이용자 정지가 되었을 때에만 본 창이 나타납니다.</p>
 <h2>제재된 이유를 알게 해주세요.</h2>
-<p>공식 디스코드 #제재이력, 공식 카페 (비정기적)로 안내드리고 있으며, 해당 채널로 접근이 어려우신 경우 고객센터 (support@morem.me)로 문의주시면 친절히 답변 드리겠습니다.</p>
+<p>공식 디스코드 #제재이력, 공식 카페 (비정기적)로 안내드리고 있으며, 해당 채널로 접근이 어려우신 경우 고객센터 (support@kkutu.plus)로 문의주시면 친절히 답변 드리겠습니다.</p>
 <p>단, 고객센터를 통한 제재이력 확인은 제재 시점으로부터 15일 이내에만 가능합니다.</p>
 <h2>해제 시점은 어떻게 알 수 있나요?</h2>
 <p>회원님의 제재 해제 시점은 <strong id="blockSpan"></strong>입니다.</p>
 <p>제재가 해제된 이후로는 제재 이력만 개인정보 처리방침에 의거 기록됩니다.</p>
 <h2>무고하게 밴 된 것 같습니다. 제재를 해제해주세요.</h2>
-<p>제재 관련 항소는 support@morem.me로 주실 시 면밀히 검토해보겠습니다.</p>
+<p>제재 관련 항소는 support@kkutu.plus로 주실 시 면밀히 검토해보겠습니다.</p>
 </div>
 <script>
 document.addEventListener("DOMContentLoaded",function(){const e=new URLSearchParams(window.location.search),t=e.get("block");t&&(document.getElementById("blockSpan").textContent=t)});
