이전 Evt 추가 (05.31반영)

--- a/Front/static/notice/global_notice.html
+++ b/Front/static/notice/global_notice.html
@@ -1,3 +1,2 @@
 ﻿<!--차기작 <strong>끄투위키</strong>에 대한 소식을 가장 먼저! <a href="https://discord.gg/bt25WdwzR7" style="background-color:blue;color:#fff;" target="_blank">[참여하기]</a>-->
-
-모던 UI 지원이 2024년 6월 중으로 잠시 중단됩니다. 완벽한 모습으로 돌아오겠습니다.
+지금 끄투리오 계정을 만들고 나중에 더 편리하게 계정 이관 하세요~! <a href="https://kkutu.io" style="background-color:blue;color:#fff;" target="_blank">[계정 만들기]</a>
