--- a/Front/static/notice/global_notice_m.html
+++ b/Front/static/notice/global_notice_m.html
@@ -1,10 +1,9 @@
-﻿<h1 style="text-align: center;">📌 iOS 플레이 안내</h1>
+﻿<h1 style="text-align: center;">📌 서비스 중단 예고</h1>
 
 <ul>
-    <li><strong>아이폰 (iOS) 기기 사용 시 홈 화면에 추가 기능을 이용해주세요!</strong></li>
-    <li>홈화면에 추가 기능을 이용하시면 오디오 재생이 가능합니다.</li>
-    <li>오디오 재생이 여전히 안 되는 경우 <strong>무음 모드</strong>를 끄고, 로딩 동안 화면을 터치해주세요.</li>
-    <li>모바일 환경 개선중입니다. 가급적 PC로 플레이해주세요.</li>
+    <li><strong>6월 30일 플러스끄투 접속이 중단됩니다.</strong></li>
+    <li>해당 기간 이후에는 끄투리오로 서비스가 통합됩니다.</li>
+    <li>기간(~12.31) 내에 수동으로 계정을 이전하셔야 계속 플레이가 가능합니다.</li>
 </ul>
 
 <p style="text-align: center; margin-bottom: 10px">터치하면 창을 닫을 수 있습니다.</p>
